...
        Switch(
            checked = roundUp,
            onCheckedChange = onRoundUpChanged,
            modifier = Modifier
                .fillMaxWidth() // Fill its max width
                .wrapContentWidth(Alignment.End) // Wrap the content and the alignment it to the End(Right)
                .semantics { contentDescription = "Switch button Round Up?"}
        )
    }
}

// The visibility modifier of the method is 'internal' because I need access it in the test
@VisibleForTesting // Allow the visibility for the test
...
